--- a/Trabalho/web/index.html
+++ b/Trabalho/web/index.html
@@ -15,6 +15,7 @@ and open the template in the editor.
         <ul class = "nav navbar-nav">
             <li><a href="CadastroVagas.html">Cadastrar Vagas</a></li>
             <li><a href="">Tela de vagas disponíveis</a></li>
+            <li>novo link</li>
         </ul>
     </body>
 </html>
