--- a/Trabalho/web/AcessoUsu.html
+++ b/Trabalho/web/AcessoUsu.html
@@ -22,6 +22,7 @@ and open the template in the editor.
             <br>
             <input type="submit" value="OK" />
             <br><br><a href='index.html'>voltar</a>
+            <br><br><br><a href='index.html'>Administração</a>"
         </form>
     </body>
 </html>
