--- a/Trabalho/web/index.html
+++ b/Trabalho/web/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <h1>Estacionamento Online</h1>
         <ul class = "nav navbar-nav">
             <li><a href="CadastroVagas.html">Cadastrar Vagas</a></li>
-            <li><a href="AcessoUsu.html">Acesso para usuários</a></li>
+            <li><a href="Inicial1.html">Acesso para usuários</a></li>
         </ul>
     </body>
 </html>
