--- a/Trabalho/web/AcessoUsu.html
+++ b/Trabalho/web/AcessoUsu.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1>Acesso de Usuários</h1>
-        <form action="VagaServlet" method="POST">
+        <form action="UsuarioServlet" method="POST">
             <label for="nome">Placa: </label><br>
             <input type="text" id="placa" name="placa"/>
             <br>
@@ -21,8 +21,7 @@ and open the template in the editor.
             <br>
             <br>
             <input type="submit" value="OK" />
-            <br><br><a href='index.html'>voltar</a>
-            <br><br><br><a href='index.html'>Administração</a>"
+            <br><br><a href='Inicial1.html'>voltar</a>
         </form>
     </body>
 </html>
