--- a/Trabalho/web/Inicial1.html
+++ b/Trabalho/web/Inicial1.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     </head>
     <body>
         <form action="AcessoUsu.html" method="get"><input class="btnIn" type="submit" value="Entrada" /></form>
-        <form action="" method="get"><input class="btnOut" type="submit" value="Saída" /></form>
+        <form action="SaidaUsu" method="get"><input class="btnOut" type="submit" value="Saída" /></form>
         <form action="SenhaAdm.html" method="get"><input class="adm" type="submit" value="Administrador" /></form>
     </body>
 </html>
