--- a/Trabalho/web/SaidaUsu.html
+++ b/Trabalho/web/SaidaUsu.html
@@ -11,13 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-                <h1>Acesso de Usuários</h1>
-        <form action="UsuarioServlet" method="POST">
+                <h1>Saída de Usuários</h1>
+        <form action="UsuarioSaidaServlet" method="POST">
             <label for="nome">Placa: </label><br>
             <input type="text" id="placa" name="placa"/>
-            <br>
-            <label for="nome">Nome: </label><br>
-            <input type="text" id="nome" name="nome"/>
             <br>
             <br>
             <input type="submit" value="OK" />
