--- a/Trabalho/web/Inicial1.html
+++ b/Trabalho/web/Inicial1.html
@@ -12,7 +12,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/Principal.css"/>
     </head>
     <body>
-        <form action="AcessoUsu.html" method="get"><input class="btnIn" type="submit" value="Entrada" /></form>
+        <form action="AcessoUsu.html" method="get"><input class="btnIn" type="submit" value="Reserva" /></form>
         <form action="SaidaUsu.html" method="get"><input class="btnOut" type="submit" value="Saída" /></form>
         <form action="SenhaAdm.html" method="get"><input class="adm" type="submit" value="Administrador" /></form>
     </body>
