--- a/Trabalho/web/index.html
+++ b/Trabalho/web/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     <body>
         <h1>Estacionamento Online</h1>
         <ul class = "nav navbar-nav">
-            <li><a href="CadastroVagas.html">Cadastrar Vagas</a></li>
+            <li><a href="CadastroUsuario.html">Cadastro de Usuário</a></li>
             <li><a href="Inicial1.html">Acesso para usuários</a></li>
         </ul>
     </body>
