--- a/Trabalho/web/CadastroUsuario.html
+++ b/Trabalho/web/CadastroUsuario.html
@@ -23,10 +23,10 @@ and open the template in the editor.
             <input type="number" id="senha" name="senha"/>
             <br>
             <label for="nome">Placa do Carro: </label><br>
-            <input type="number" id="placacar" name="placacar"/>
+            <input type="text" id="placacar" name="placacar"/>
             <br>
             <label for="nome">Modelo do Carro: </label><br>
-            <input type="number" id="modelocar" name="modelocar"/>
+            <input type="text" id="modelocar" name="modelocar"/>
             <br>
             <br>
             <input type="submit" value="Cadastrar" />
