--- a/Trabalho/web/SaidaUsu.html
+++ b/Trabalho/web/SaidaUsu.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
                 <h1>Saída de Usuários</h1>
-        <form action="UsuarioSaidaServlet" method="POST">
+        <form action="VagasSaidaServlet" method="POST">
             <label for="nome">Placa: </label><br>
             <input type="text" id="placa" name="placa"/>
             <br>
