--- a/Trabalho/web/AcessoUsu.html
+++ b/Trabalho/web/AcessoUsu.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1>Acesso de Usuários</h1>
-        <form action="UsuarioServlet" method="POST">
+        <form action="VagasServlet" method="POST">
             <label for="nome">Placa: </label><br>
             <input type="text" id="placa" name="placa"/>
             <br>
