--- a/Trabalho/web/CadastroUsuario.html
+++ b/Trabalho/web/CadastroUsuario.html
@@ -8,29 +8,36 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Cadastrar Usuario</h1>
-        <form action="UsuarioServlet" method="POST">
-            <label for="nome">Nome: </label><br>
-            <input type="text" id="nome" name="nome"/>
-            <br>
-            <label for="nome">E-mail: </label><br>
-            <input type="text" id="email" name="email"/>
-            <br>
-            <label for="nome">Senha: </label><br>
-            <input type="number" id="senha" name="senha"/>
-            <br>
-            <label for="nome">Placa do Carro: </label><br>
-            <input type="number" id="placacar" name="placacar"/>
-            <br>
-            <label for="nome">Modelo do Carro: </label><br>
-            <input type="number" id="modelocar" name="modelocar"/>
-            <br>
-            <br>
-            <input type="submit" value="Cadastrar" />
-            <br><br><a href='index.html'>voltar</a>      
-        </form>
+        <main class="container">
+            <h1>Cadastrar Usuario</h1>
+            <form action="UsuarioServlet" method="POST">
+                 
+                <label for="nome">Nome: </label><br>
+                <input type="text" class="form-control"  id="nome" name="nome"/>
+               
+                <br>
+                  <div class="form-group">
+                <label for="nome">E-mail: </label><br>
+                <input type="email" class="form-control" id="email" name="email"/>
+                <br>
+                <label for="nome">Senha: </label><br>
+                <input type="password" class="form-control" id="senha" name="senha"/>
+                <br>
+                <label for="nome">Placa do Carro: </label><br>
+                <input type="number" class="form-control" id="placacar" name="placacar"/>
+                <br>
+                <label for="nome">Modelo do Carro: </label><br>
+                <input type="number" class="form-control" id="modelocar" name="modelocar"/>
+                <br>
+                <br>
+                <input type="submit" class="btn btn-primary" value="Cadastrar" />
+                <br><br><a href='index.html'>voltar</a>      
+
+            </form>
+        </main>
     </body>
 </html>
