--- a/Trabalho/web/indexx.html
+++ b/Trabalho/web/indexx.html
@@ -58,7 +58,7 @@ and open the template in the editor.
       			<H1>Estacione em 3 etapas </H1>
       			<br>
       			<br>
-      			<H2>Rervere, Estacione, Pague</H2>
+      			<H2>Reserve, Estacione, Pague</H2>
 
       </div>
       <script src="js/jquery.min.js"></script>
