--- a/Trabalho/web/CadastroUsuario.html
+++ b/Trabalho/web/CadastroUsuario.html
@@ -24,7 +24,7 @@ and open the template in the editor.
                 <label for="email">E-mail: </label><br>
                 <input type="email" class="form-control" id="email" name="email"required/>
                 <br>
-                <label for="senha">Senha: </label><br>
+                <label for="senha">Senha com 6 números: </label><br>
                 <input type="password" class="form-control" id="senha" name="senha"required/>
                 <br>
                 <label for="placacar">Placa do Carro: </label><br>
@@ -35,7 +35,7 @@ and open the template in the editor.
                 <br>
                 <br>
                 <input type="submit" class="btn btn-primary" value="Cadastrar" />
-                <br><br><a href='index.html'>voltar</a>      
+                <br><br><a href='indexx.html'>voltar</a>      
 
             </form>
         </main>
