--- a/Trabalho/web/indexx.html
+++ b/Trabalho/web/indexx.html
@@ -31,18 +31,26 @@ and open the template in the editor.
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Vagas Disponiveis</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vagas<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Verificar vagas</a></li>
+                  <li><a href="#">Reservar vaga</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Verificar histórico de reservas</a></li>
+                </ul>
+              </li>
               
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pagamento <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><a href="Pagamento.html">Registrar saída e efetuar pagamento</a></li>
+                  <li><a href="#">XXXXXXXXXXXXXXXX</a></li>
                   <li role="separator" class="divider"></li>
                   <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li><a href="#">Verificar histórico de pagamentos</a></li>
+                  <li><a href="#">Configurações de pagamento</a></li>
                 </ul>
               </li>
             </ul>
