--- a/Trabalho/web/CadastroUsuario.html
+++ b/Trabalho/web/CadastroUsuario.html
@@ -24,8 +24,8 @@ and open the template in the editor.
                 <label for="email">E-mail: </label><br>
                 <input type="email" class="form-control" id="email" name="email"required/>
                 <br>
-                <label for="senha">Senha com 6 números: </label><br>
-                <input type="password" class="form-control" id="senha" name="senha"required/>
+                <label for="senha">Senha: </label><br>
+                <input type="password" class="form-control" id="senha" name="senha" placeholder="senha com 6 números" required/>
                 <br>
                 <label for="placacar">Placa do Carro: </label><br>
                 <input type="text" class="form-control" id="placacar" name="placacar"required/>
