--- a/Trabalho/web/login.html
+++ b/Trabalho/web/login.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             <br>
             <div class="row">
                 <div class="col-md-8 col-sm-8">
-                	<form action="verificarlogin" method="post" class="form-horizontal">
+                	<form action="VerificacaoServlet" method="post" class="form-horizontal">
                     	 <div class="form-group">
                     		<label for="nome" class="col-md-2 col-sm-2 control-label">E-mail: </label>
             	             <div class="col-md-6 col-sm-6">
