add atualizar cadastro em contracto

--- a/Trabalho/web/indexx.html
+++ b/Trabalho/web/indexx.html
@@ -64,10 +64,10 @@ and open the template in the editor.
 
       </nav>
 
-      			<H1>Estacione em 3 etapas </H1>
+      			<H1 class="text-center">Estacione em 3 etapas </H1>
       			<br>
       			<br>
-      			<H2>Reserve, Estacione, Pague</H2>
+      			<H2 class="text-center">Reserve, Estacione, Pague</H2>
 
       </div>
       <script src="js/jquery.min.js"></script>
