--- a/Trabalho/web/Pagamento.html
+++ b/Trabalho/web/Pagamento.html
@@ -5,6 +5,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
+    
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
@@ -23,7 +24,7 @@ and open the template in the editor.
             <br>
             <br>
             <input type="submit" value="OK"/>
-            <br><br><a href='indexx.html'>voltar</a>
+            <br><br><a href='indexx.jsp'>voltar</a>
         </form>
     </body>
 </html>
